# ChemDoE

./: .gitignore  .readthedocs.yaml  ChemDoE.spec  Dockerfile  Dockerfile_linux  Dockerfile_win  README.md  doe_manager.py  out_Python_csv.csv.csv  pyinstaller.py  pyproject.toml
.github/workflows/: build-linux.yml  build-windows.yml
ChemDoE/: config.py  doe_manager.py  element_tree_page.py  execute.py  login_manager.py  main.py  new_reaction.py  new_sample.py  script_manager.py  start_view.py
ChemDoE/examples/: csv_sample.py  json_sample.py  jsov_sample.py
ChemDoE/icons/: __init__.py
ChemDoE/utils/: dd_manager.py  page_manager.py  pages.py
build_scripts/: run_linux.sh  run_win.sh  sign.sh  win_version_info.txt
docs/: Makefile  requirements.txt
docs/source/: conf.py  executing_scripts.rst  getting_started.rst  index.rst  python_script.rst  r_script.rst
tests/: test_python_script.py
